# ctypes-pointer-utils

./: README.md  pyproject.toml
src/ctypes_pointer_utils/: __init__.py
tests/: test_smoke.py
