[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctypes-pointer-utils"
version = "0.1.0"
description = "ctypes pointer create/wrap helpers (optional numpy)"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "oldrepublicwizard" }]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/oldrepublicwizard/ctypes-pointer-utils"
Repository = "https://github.com/oldrepublicwizard/ctypes-pointer-utils"

[tool.setuptools.packages.find]
where = ["src"]
